# h100_gdn_cuda

./: .clang-format  .example_env  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  benchmark_chunked.csv  cuda_graph_seq_state2.csv  develop.sh  forward_pass_perf_analysis.md  install.sh  no_cuda_graph_seq_state2.csv  pyproject.toml  run_cmake.sh  setup.py
csrc/: python_api.cpp
csrc/apis/: gdn.hpp  gdn_forward.cpp  gdn_forward.hpp  layout.hpp
csrc/jit/: cache.hpp  compiler.hpp  runtime.hpp
csrc/jit/utils/: common.hpp  culib.hpp  files.hpp  lazy_init.hpp  math.hpp
csrc/jit_kernels/heuristics/: common.hpp  sm90_arch.hpp
csrc/jit_kernels/impls/: sm90_bf16_chunked_seq_state.hpp  sm90_bf16_compute_u_w.hpp  sm90_bf16_gdn_chunked_compute_O.hpp  sm90_bf16_gdn_recurrent.hpp  sm90_layout.hpp
csrc/kernels/: internal_api.hpp
gdn_cuda/include/gdn_cuda/: device.hpp  error.hpp  format.hpp  types.h  utils.h
gdn_cuda/include/gdn_cuda/kernels/: gdn_helpers.cuh  sm90_bf16_chunked_seq_state_update.cuh  sm90_bf16_chunked_seq_state_update2.cuh  sm90_bf16_gdn_chunked_compute_O.cuh  sm90_bf16_gdn_compute_u_w.cuh  sm90_bf16_gdn_recurrent.cuh  sm90_layout.cuh
gdn_cuda/include/gdn_cuda/kernels/common/: common.hpp  scheduler.cuh  sm90_utils.cuh  types.hpp
src/: gdn_ops.cu
test/test_cpp/: test_gdn_chunked_compute_O.cpp  test_gdn_compute_u_w.cpp  test_gdn_fwd.cpp  test_gdn_helpers.cpp  test_gdn_recurrent.cpp  test_gdn_seq_state_passing.cpp  test_utils.h
test/test_py/: benchmark_chunked_forward.py  benchmark_seq_state_update.py  fla_comparison.py  fla_test.py  test_fla_recurrent_comparison.py
